fix logo link z-index

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -196,6 +196,7 @@ $max_font: 22px;
     width: 55px;
     height: 40px;
     transition: top 1s ease-in-out;
+    z-index: 10;
     &.scrolled {
       top: calc(50% - 80px);
     }
